test/sc++/error/position-no-cells-vertices.scpp
../../scc/error/position-no-cells-vertices.sc